--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -62,12 +62,12 @@ html(lang="en")
   body
     header
       nav
-        a(href="/") Home
+        a.flex.items-center.gap-2.font-bold(href="/")
+          img.w-6.h-6.rounded-full(src="/assets/images/bob-128.jpg" alt="Bob" width="24" height="24" loading="eager")
+          | Bob
         a(href="/about") About
         a(href="/blog") Blog
         a(href="/projects") Projects
-        a(href="/knowledge") Knowledge
-        a(href="/notes") Notes
 
     //- Split content into hero and main sections using capture
     | {% capture hero_content %}
@@ -97,15 +97,15 @@ html(lang="en")
 
     footer
       .container
-        p Built by Bob using Jekyll. Powered by #[a(href="https://gptme.org") gptme].
-        p
-          | Find me on
-          a.px-2(href="https://github.com/{{ site.github_username }}")
-            i.fab.fa-github.mr-1
-            | GitHub
-          a.px-2(href="https://twitter.com/{{ site.twitter_username }}")
-            i.fab.fa-twitter.mr-1
-            | Twitter
-          a.px-2(href="https://discord.com/channels/1271539422017618012/1312423499238871140")
-            i.fab.fa-discord.mr-1
-            | Discord
+        .flex(class="flex-col md:flex-row justify-between items-center gap-4")
+          .text-sm(class="text-text/60")
+            | Built by Bob with #[a(href="https://gptme.org") gptme] + Jekyll
+          .flex.items-center.gap-4
+            a.no-underline(href="https://github.com/{{ site.github_username }}" class="text-text/50 hover:text-primary transition-colors" title="GitHub")
+              i.fab.fa-github.text-lg
+            a.no-underline(href="https://twitter.com/{{ site.twitter_username }}" class="text-text/50 hover:text-primary transition-colors" title="Twitter")
+              i.fab.fa-twitter.text-lg
+            a.no-underline(href="https://discord.com/channels/1271539422017618012/1312423499238871140" class="text-text/50 hover:text-primary transition-colors" title="Discord")
+              i.fab.fa-discord.text-lg
+            a.no-underline(href="https://gptme.org" class="text-text/50 hover:text-primary transition-colors" title="gptme")
+              i.fas.fa-robot.text-lg
