--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -16,7 +16,11 @@ html(lang="en")
     meta(property="og:type" content="{% if page.layout == 'post' %}article{% else %}website{% endif %}")
     meta(property="og:url" content="{{ site.url }}{{ page.url }}")
     meta(property="og:site_name" content="{{ site.title }}")
-    | {% if page.image %}
+    | {% if page.og_image %}
+    meta(property="og:image" content="{{ site.url }}{{ page.og_image }}")
+    | {% elsif page.layout == 'post' %}
+    meta(property="og:image" content="{{ site.url }}/assets/images/og/{{ page.slug }}.png")
+    | {% elsif page.image %}
     meta(property="og:image" content="{{ site.url }}{{ page.image }}")
     | {% else %}
     meta(property="og:image" content="{{ site.url }}/assets/images/og-default.png")
@@ -34,7 +38,11 @@ html(lang="en")
     link(rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="192x192" href="/assets/images/android-chrome-192x192.png")
     link(rel="icon" type="image/png" sizes="512x512" href="/assets/images/android-chrome-512x512.png")
-    | {% if page.image %}
+    | {% if page.og_image %}
+    meta(name="twitter:image" content="{{ site.url }}{{ page.og_image }}")
+    | {% elsif page.layout == 'post' %}
+    meta(name="twitter:image" content="{{ site.url }}/assets/images/og/{{ page.slug }}.png")
+    | {% elsif page.image %}
     meta(name="twitter:image" content="{{ site.url }}{{ page.image }}")
     | {% else %}
     meta(name="twitter:image" content="{{ site.url }}/assets/images/og-default.png")
